force-app/main/default/objects/QA_Response_Item__c/QA_Response_Item__c.object-meta.xml
<CustomObject>
    <description>related dengan object QA Response</description>
    <label>QA Response Item</label>
    <nameField>
        <displayFormat>QA Response Item - {0000000}</displayFormat>
        <label>QA Response Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Response Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>