force-app/main/default/objects/QA_Response_Item__c/fields/Finding__c.field-meta.xml
<CustomField>
    <fullName>Finding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finding</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>QA_Master_Item__c.Aspek_Penilaian__c</field>
            <operation>equals</operation>
            <valueField>$Source.Master_QA__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>QA_Master_Item__c</referenceTo>
    <relationshipName>Penilaian_QA</relationshipName>
    <type>Lookup</type>
</CustomField>