force-app/main/default/objects/QA_Response_Item__c/fields/Fitur_Penilaian_QA__c.field-meta.xml
<CustomField>
    <fullName>Fitur_Penilaian_QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Response</label>
    <referenceTo>QA_Response__c</referenceTo>
    <relationshipLabel>QA Response Item</relationshipLabel>
    <relationshipName>Penilaian_QA</relationshipName>
    <type>Lookup</type>
</CustomField>