force-app/main/default/objects/QA_Response_Item__c/fields/Hasil__c.field-meta.xml
<CustomField>
    <fullName>Hasil__c</fullName>
    <label>Hasil</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>