force-app/main/default/objects/QA_Response_Item__c/fields/Keterangan_Penilaian_QA__c.field-meta.xml
<CustomField>
    <fullName>Keterangan_Penilaian_QA__c</fullName>
    <label>Keterangan Penilaian QA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>