force-app/main/default/objects/QA_Response_Item__c/fields/Master_QA__c.field-meta.xml
<CustomField>
    <fullName>Master_QA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Master</label>
    <referenceTo>QA_Master__c</referenceTo>
    <relationshipLabel>QA Response Item</relationshipLabel>
    <relationshipName>Master_QA</relationshipName>
    <type>Lookup</type>
</CustomField>