force-app/main/default/objects/QA_Response_Item__c/fields/QA_Response_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>QA_Response_Item_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Name &amp; &quot; &quot; &amp; &quot;-&quot; &amp; &quot; &quot; &amp;  Master_QA__r.Name , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA Response Item Number</label>
    <type>Text</type>
</CustomField>