force-app/main/default/objects/QA_Response_Item__c/fields/Sanggahan_Finding__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan_Finding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sanggahan - Finding</label>
    <referenceTo>QA_Master_Item__c</referenceTo>
    <relationshipLabel>QA Response Item (Sanggahan - Finding)</relationshipLabel>
    <relationshipName>QA_Response_Item</relationshipName>
    <type>Lookup</type>
</CustomField>