force-app/main/default/objects/QA_Response_Item__c/fields/Sanggahan_Hasil__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan_Hasil__c</fullName>
    <label>Sanggahan - Hasil</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>