force-app/main/default/objects/QA_Response_Item__c/fields/Sanggahan_Keterangan_Penilaian_QA__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan_Keterangan_Penilaian_QA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sanggahan - Keterangan Penilaian QA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>