force-app/main/default/objects/QA_Response_Item__c/fields/Sanggahan_Skor_Agent_Leader__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan_Skor_Agent_Leader__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sanggahan - Skor Agent Leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>