force-app/main/default/objects/QA_Response_Item__c/fields/Skor__c.field-meta.xml
<CustomField>
    <fullName>Skor__c</fullName>
    <formula>Master_QA__r.Bobot__c *  Hasil__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>