force-app/main/default/objects/QA_Response_Item__c/fields/Skor_Agent_Leader__c.field-meta.xml
<CustomField>
    <fullName>Skor_Agent_Leader__c</fullName>
    <label>Skor - Agent Leader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>