force-app/main/default/objects/QA_Response_Item__c/fields/temp_Id_from_Response__c.field-meta.xml
<CustomField>
    <fullName>temp_Id_from_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>temp Id from Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>